Name:                cabal-ghci
Version:             0.1
Synopsis:            Set up ghci with options taken from a .cabal file
Homepage:            http://code.atnnn.com/
License:             BSD3
License-file:        LICENSE
Author:              Etienne Laurin
Maintainer:          etienne@atnnn.com
Category:            Development
Build-type:          Simple
Cabal-version:       >=1.2

Executable cabal-ghci
  Main-is: CabalGHCI.hs
  extensions: UnicodeSyntax
  build-depends: process

Library
  Exposed-modules: Distribution.Dev.Interactive
  Build-depends: Cabal, base, directory, filepath
  extensions: UnicodeSyntax
