Name:                cabal-ghci
Version:             0.2.1.1
Synopsis:            Set up ghci with options taken from a .cabal file
Description: The executable cabal-ghci runs ghci with the paths and extensions needed by a cabal project. The cabalSet function can be added to your .ghci to provide the same functionality at runtime, giving you more control over the options that are set.
Homepage:            http://code.atnnn.com/projects/cabal-ghci/wiki
License:             BSD3
License-file:        LICENSE
Author:              Etienne Laurin
Maintainer:          etienne@atnnn.com
Category:            Development
Build-type:          Simple
Cabal-version:       >=1.10

Source-repository head
    type: darcs
    location: http://code.atnnn.com/darcs/cabal-ghci/

Executable cabal-ghci
  default-language:    Haskell2010
  default-extensions: UnicodeSyntax, ViewPatterns
  Main-is: CabalGHCI.hs
  build-depends: Cabal, base, directory, filepath, process

Library
  default-language:    Haskell2010
  default-extensions: UnicodeSyntax, ViewPatterns
  Exposed-modules: Distribution.Dev.Interactive
  Build-depends: Cabal, base, directory, filepath
