Name:                cabal-ghci
Version:             0.2.2
Synopsis:            Set up ghci with options taken from a .cabal file
Description: The executable cabal-ghci runs ghci with the paths and extensions needed by a cabal project. The cabalSet function can be added to your .ghci to provide the same functionality at runtime, giving you more control over the options that are set.
Homepage:            http://github.com/atnnn/cabal-ghci
License:             BSD3
License-file:        LICENSE
Author:              Etienne Laurin
Maintainer:          etienne@atnnn.com
Category:            Development
Build-type:          Simple
Cabal-version:       >=1.6

Source-repository head
    type: git
    location: git://github.com/atnnn/cabal-ghci/

Executable cabal-ghci
  Main-is: CabalGHCI.hs
  extensions: UnicodeSyntax, ViewPatterns
  build-depends: process

Library
  Exposed-modules: Distribution.Dev.Interactive
  Build-depends: Cabal, base == 4.*, directory, filepath
  extensions: UnicodeSyntax, ViewPatterns
